2001-10-15  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tcl.h: 
	* win/tclWinPort.h: moved #define of WIN32 to tcl.h where __WIN32__
	is defined and added #ifndef check.

2001-10-12  Jeff Hobbs  <jeffh@ActiveState.com>

	* tests/winPipe.test: removed obsolete cat16 tests, fixed
	winpipe-1.22 to only run on Win9*.

	* tests/timer.test: slight skewing of after values to allow for
	correct results on burdened machines.

	* tests/winFCmd.test: differentiated test results for win2k 
	versus not.

	* win/tclWinInit.c: cleanup back-ported from 8.4 HEAD.

	* win/tclWinPort.h: move winsock2.h include, header cleanup
	back-ported from 8.4 HEAD.

	* library/encoding/ebcdic.enc:
	* tools/encoding/ebcdic.txt: EBCDIC charset mapping.
	[Patch #219323] (nijtmans)

	* library/encoding/tis-620.enc:
	* tools/encoding/tis-620.txt: TIS-620 charset mapping.
	[Patch #467423] (poonlap)

2001-10-11  Miguel Sofer  <msofer@users.sourceforge.net>
	
	* generic/tclLiteral.c: (TclReleaseLiteral) insured that
	self-referential bytecodes are properly cleaned up on interpreter
	deletion [Bug 467523] (Ronnie Brunner)

2001-10-10  Don Porter	<dgp@users.sourceforge.net>

	* tests/unixInit.test:  Corrected restore of ::env(LANG).

2001-10-10  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* generic/tclCmdMZ.c: Removed pointless #include and SCAN_* flags.
	(Tcl_RegexpObjCmd): Fixed match area offset bug.
	(Tcl_StringObjCmd): Fixed STR_INDEX and STR_REPEAT, and tidied up
	STR_IS and STR_LENGTH.

2001-10-09  Miguel Sofer  <msofer@users.sourceforge.net>
	
	* generic/tclObj.c: removed duplicate definition of tclObjsAlloced
	and tclObjsFreed. These variables only exist when compiling with
	TCL_COMPILE_STATS, and are already defined in generic/tclExecute.c

2001-10-09  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tclFileName.c (ExtractWinRoot): corrected ABR error

	* doc/bgerror.n: back-port from 8.4 that indicates new behavior of
	bgerror in Tk.

2001-10-09  Miguel Sofer  <msofer@users.sourceforge.net>