@@ -10,7 +10,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 # 
-# RCS: @(#) $Id: tclInt.decls,v 1.20.2.4 2001/09/10 17:15:13 andreas_kupries Exp $
+# RCS: @(#) $Id: tclInt.decls,v 1.20.2.5 2001/10/15 20:27:23 andreas_kupries Exp $
 
 library tcl
 
@@ -612,6 +612,25 @@ declare 161 generic {
 }
 declare 162 generic {
     void TclChannelEventScriptInvoker(ClientData clientData, int flags)
+}
+
+# New in 8.3.4, support for shared library version of tclcompiler.
+
+# ALERT: The result of 'TclGetInstructionTable' is actually an
+# InstructionDesc*" but we do not want to describe this structure in
+# "tclInt.h". It is described in "tclCompile.h". Use a cast to the
+# correct type when calling this procedure.
+
+declare 163 generic {
+	void * TclGetInstructionTable (void)
+}
+
+# ALERT: The argument of 'TclExpandCodeArray' is actually a
+# "CompileEnv*" but we do not want to describe this structure in
+# "tclInt.h". It is described in "tclCompile.h".
+
+declare 164 generic {
+	void TclExpandCodeArray (void *envPtr)
 }
 
 ##############################################################################
